# AI-Agentic-SoME-Moderation

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: crap-refactorer.md  mutation-hunter.md  quality-gate.md  spec-writer.md  tdd-developer.md
features/: README.md
moderation/: appeal.py  models.py  pipeline.py  review.py  routing.py  schemas.py  tracing.py  utils.py
moderation/agents/: moderator.py  summarizer.py
scripts/: app.py  crap.py  run_pipeline.py
tests/: test_appeal.py  test_moderator.py  test_pipeline.py  test_routing.py  test_summarizer.py  test_utils.py
