[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-agentic-some-moderation"
version = "0.1.0"
description = "Agentic social media content moderation system"
requires-python = ">=3.11"
dependencies = [
    "langfuse>=2.0.0,<3.0.0",
    "litellm>=1.50.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["moderation"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
